web-infras/parser/tests/fixtures/babel/es2015/yield/parameter-name-generator-method/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,12)
1|({ *method(yield) {} });
 |          ^
